--- a/EX3/makefile
+++ b/EX3/makefile
@@ -2,17 +2,19 @@ CC = cc
 CFLAGS = -g -Wall
 CCLINK = $(CC)
 LIBS =
-OBJS = main_list.o list.o person.o
+OBJS =  main.o cluster.o list.o person.o point.o 
 RM = rm -f
 # Creating the executable (airport)
-main_list: $(OBJS)
-	$(CCLINK) -o main_list $(OBJS) $(LIBS)
+ADT: $(OBJS)
+	$(CCLINK) -o ADT $(OBJS) $(LIBS)
 
 # Creating object files using default rules
-main_list.o: main_list.c defs.h list.h person.h
-list.o: list.c defs.h list.h
+main.o: main.c list.h defs.h point.h cluster.h person.h
+cluster.o: cluster.c defs.h list.h point.h cluster.h
+point.o: point.c defs.h list.h point.h
 person.o: person.c defs.h person.h
+list.o: list.c defs.h list.h
 
 # Cleaning old files before new make
 clean: 
-	$(RM) main_list *.o *.bak *~ "#"* core
+	$(RM) ADT *.o *.bak *~ "#"* core
