Added negative factor consideration and fixed makefile. SUBMITTED EX4

--- a/EX4/makefile
+++ b/EX4/makefile
@@ -5,8 +5,8 @@ LIBS =
 OBJS = Course.o CS_Course.o EE_Course.o main.o  EE_Course.h Person.o StArray.o  Course.h EE_Course.h Student.o  EE_Course.h 
 RM = rm -f
 
-student: $(OBJS)
-	$(CCLINK) -o student $(OBJS) $(LIBS)
+students: $(OBJS)
+	$(CCLINK) -o students $(OBJS) $(LIBS)
 
 Course.o: Course.cpp Proj.h Course.h
 CS_Course.o: CS_Course.cpp Proj.h Course.h CS_Course.h
@@ -20,4 +20,4 @@ Student.o: Student.cpp Student.h Proj.h Person.h CS_Course.h Course.h \
  EE_Course.h
 
 clean:
-	$(RM) student *.o *.bak *~ "#"* core
+	$(RM) students *.o *.bak *~ "#"* core
